# unicorn-viz

./: .config.toml.swp  .gitignore  README.md  config.full.example.toml  config.toml  plan.md  pyproject.toml  requirements.txt  run.sh
.github/: copilot-instructions.md
assets/ansi/: acid_logo.ans  colour_test.ans  fire_scene.ans  future_crew.ans  plasma_test.ans  razor_bbs.ans  unicorn_viz_title.ans
assets/ansi/acid/: acid-100_ANSC-100.ANS  acid-100_DA-ANIME.ANS  acid-100_GO-EAST.ANS  acid-100_OS-HAZ01.ANS  acid-50a_NI-SKULL.ANS  acid-50a_PH-MOOSE.ANS  acid-50a_RA-FIFTY.ANS  acid-50a_SE-JELLO.ANS  acid-50a_SE-LIME.ANS  acid-56_KT-ABRAX.ANS  acid-56_MD-SKULL.ANS  acid-56_NEWS-56.ANS
docs/: configuration.md  developer-guide.md  effect-settings.md  user-guide.md
tools/: fetch_acid_ans.py  generate_ansi_art.py
unicornviz/: __init__.py  __main__.py  app.py  config.py  hotkeys.py  midi.py  overlays.py  playlist.py  splash.py
unicornviz/ansi/: __init__.py  font.py  loader.py  renderer.py
unicornviz/audio/: __init__.py  analyzer.py  capture.py  manager.py
unicornviz/effects/: alien_biome.py  ansi_viewer.py  audio_spectrum.py  base.py  copper_bars.py  cosmos.py  cube_3d.py  dali.py  escher.py  fire.py  fire_lifelike.py  fractal_zoom.py  metaballs.py  particle_storm.py  plasma.py  raymarcher.py  registry.py  sine_scroller.py  starfield.py  tunnel.py  van_gogh.py  vector.py  water.py
